--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -19,51 +19,95 @@
 
 {%- endmacro %}
 {% macro flash_message() -%}
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-success" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-success" role="alert">{{ message }}</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
 {%- endmacro %}
 
 {% macro showcase_block(showcases) -%}
+{%if not showcases%}
+Sorry there are no Showcases yet.
+{%else%}
 <div class="card-group">
-  {% for showcase in showcases %}
-    <div class="card" id="{{showcase.id}}">
-      <div class="card-body">
+    {% for showcase in showcases %}
+    {{showcase_identity(showcase)}}
+    {%endfor%}
+</div>
+{%endif%}
+
+{%- endmacro %}
+
+{% macro showcase_identity(showcase,editable=false, linked=true, comments=false) -%}
+<!-- comments: False - Do not display comments, None: No comments to display or [list] of comments to display-->
+<div class="card" id="{{showcase.id}}">
+    <div class="card-body" style="position:relative">
+        {% if linked %}
+        <a href="/review/{{showcase.submission.filepath}}" class="stretched-link"></a>
+        {% endif %}
         <h5 class="card-title">{{showcase.name}}</h5>
         <p class="card-text">
-         {{showcase.description}}
+            {{showcase.description}}
         </p>
-        <p class="card-text">
-          
-        </p>
-        </div>
-        <div class="card-footer">
-            {%for tag in showcase.tags%}
-            <a href="?filtered_by={{tag}}" class="badge rounded-pill bg-secondary">{{tag}}</a>
-            {%endfor%}
-          <div class="btn-wrapper text-center d-flex justify-content-between">
-            <small class="text-muted">{{showcase.created|timeago}}</small> 
-
-            <p class="upvote {{'text-primary' if user in showcase.voted_users else 'pointer'}}"><span class="far fa-thumbs-up"></span><span class="score">{{showcase.score}}</span></p>
-          </div>
-
-        </div>
-      </div>
-    {%endfor%}
-
-    
     </div>
+    <div class="card-footer">
+        {%for tag in showcase.tags%}
+        {% if linked %}
+        <a href="?filtered_by={{tag}}" class="badge rounded-pill bg-secondary">{{tag}}</a>
+        {% else %}
+        <span class="badge rounded-pill bg-secondary">{{tag}}</span>
+        {% endif %}
+        {%endfor%}
+        <div class="btn-wrapper text-center d-flex justify-content-between">
+            <small class="text-muted">{{showcase.created|timeago}}</small>
+            <p class="upvote {{'text-primary' if user in showcase.voted_users else 'pointer'}}"><span class="far fa-thumbs-up"></span><span class="score">{{showcase.score}}</span></p>
+
+        </div>
+    </div>
+    {%if comments is not false%}
+    <div class="card-footer bg-light">
+
+        <!-- Do not display add comments-->
+        {%if comments is not none%}
+        {%for comment in comments%}
+        {{comment_block(comment)}}
+        {%endfor%}
+        {%endif%}
+        <div class="form-outline">
+            <input class="form-control comment-box" id="comment"></input>
+            <label class="form-label" for="comment">+ Add your comment</label>
+        </div>
+        <small>
+            <div class="float-right">
+                <span role="button" class="post"> Post <i class="fas fa-level-down-alt fa-rotate-90"></i></span></div>
+            <span class="text-muted description">
+                Comments support `inline code`, ```code blocks```, **bold** and _italic_ formatting</span>
+        </small>
+    </div>
+    {%endif%}
+</div>
 
 {%- endmacro %}
 
-{%- macro comment(text)%}
-<li class="list-group-item">
-{{text|safe}}</li>
+{%- macro comment_block(comment)%}
+<div class="d-flex flex-start align-items-center">
+    <img class="rounded-circle shadow-1-strong me-3" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(19).jpg" alt="avatar" width="60" height="60" />
+    <div>
+        <h6 class="fw-bold mb-1">{{comment.user.username}}</h6>
+        <p class="text-muted small mb-0">
+            {{comment.created|timeago}}
+        </p>
+    </div>
+</div>
+
+<p class="mt-3 mb-4 pb-2">
+    {{comment.html|safe}}
+</p>
 {%- endmacro %}
+
 
 {% macro grade_block(grade,threshold=50) -%}
 
@@ -85,7 +129,6 @@
     <span class="visually-hidden">grade</span></span>
 {%endif%}
 {%- endmacro %}
-
 {% macro task_card(name, description,repository, submissions) -%}
 <div class="card">
     <h5 class="card-header d-flex justify-content-between align-items-center">{{name}}
@@ -100,8 +143,7 @@
         </p>
         <a href="https://colab.research.google.com/github/{{repository}}" target="_blank"><span class="badge bg-warning text-dark">
                 <i class="fas fa-infinity"></i> Open in Colab</span></a>
-        <a href="https://www.github.com/{{repository}}"target="_blank"><span class="badge bg-success ms-2 me-5"><i
-                    class="fas fa-download fa-lg"></i>
+        <a href="https://www.github.com/{{repository}}" target="_blank"><span class="badge bg-success ms-2 me-5"><i class="fas fa-download fa-lg"></i>
                 Download</span></a>
     </div>
     <div class="card-footer text-muted">
