--- a/annie/blueprints/evaluation/templates/evaluation.html
+++ b/annie/blueprints/evaluation/templates/evaluation.html
@@ -8,7 +8,7 @@
 
     <section id="welcome">
 
-      {% if config["ENABLE_SHOWCASE"] and not submission.showcase%}
+      {% if config["ENABLE_SHOWCASE"] and not submission.showcase and not submission.assignment.path%}
       <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" data-mdb-toggle="modal" data-mdb-target="#showcase-modal">
         Ready to show it to others?
       </button>
