--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -138,7 +138,7 @@ Sorry there are no Showcases yet.
 {%endif%}
 {%- endmacro %}
 {% macro task_card(name, description,repository, submissions) -%}
-<div class="card">
+<div class="card" id="{{name}}">
     <h5 class="card-header d-flex justify-content-between align-items-center">{{name}}
         {% if submissions%}
         {{grade_block(submissions[0].grade) if submissions[0].assignment.path is not none}}
