--- a/annie/templates/_nav.html
+++ b/annie/templates/_nav.html
@@ -23,7 +23,7 @@
             {% for assignment in current_user["assignments"]%}
                 {%set cur_subs=current_user.get_submissions_by_assignment(assignment)%}
             <li class="sidenav-item">
-                <a class="sidenav-link ripple-surface" href="/" tabindex="1">
+                <a class="sidenav-link ripple-surface" href="/#{{assignment.title}}" tabindex="1">
                     <i class="fas fa-fw pr-3
                     {%-if cur_subs and cur_subs[0].grade-%}
                     {{' fa-check' if cur_subs[0].grade.overall>50 else ' fa-times'}}
