--- a/annie/blueprints/user/templates/index.html
+++ b/annie/blueprints/user/templates/index.html
@@ -1,4 +1,4 @@
-{% from '_macros.html' import task_card,gradeblock, flash_message with context%}
+{% from '_macros.html' import task_card,gradeblock,submission_table, flash_message with context%}
 {% extends "_base.html" %}
 {%block custom_css%}
 {{ dropzone.load_css() }}
@@ -14,7 +14,7 @@
 <main class="container">
     <section class="my-5" id="welcome">
         {{flash_message()}}
-        <div class="alert alert-warning" role="alert"><b>Warning:</b> This is a first prototype, bugs and errors might occur frequently </div>
+        <div class="alert alert-dark" role="alert"><b>Warning:</b> This is a first prototype, bugs and errors might occur frequently </div>
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1">Hey {{user.username}}!</h1>
@@ -35,7 +35,7 @@
     </section>
 
     <section id="assignments">
-        <div class="alert alert-primary" role="alert">Use this token for authentication <code id="auth_token">{{user.auth_token}}</code> </div>
+        <div class="alert alert-dark" role="alert">Use this token for authentication <code id="auth_token">{{user.auth_token}}</code> </div>
         {% if user.assignments %}
         {%for assignment in user.assignments %}
         {{task_card(assignment.title,assignment.description,assignment.github, submissions=user.get_submissions_by_assignment(assignment))}}
@@ -47,24 +47,8 @@
     <section id="submissions">
 
         <h4>Your latest submissions and results</h4>
-        <div class="list-group">
-            {%for sub in user.submissions %}
-            <div class="list-group-item list-group-item-action">
-                <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">{{sub.assignment.title}}</h5>
-                </div>
-                <p class="mb-1">
-                </p>
-                {{gradeblock(sub.grade)}}
-                <small>{{sub.created|timeago}}</small>
-            </div>
-            {%endfor%}
-        </div>
+        {{submission_table(user.submissions, showcase=True)}}
+        
     </section>
 </main>
 {%endblock content%}
-
-{% block custom_js %}
-{{ dropzone.load_js() }}
-{{ dropzone.config(custom_options="success: function(file, response){console.log(response);}") }}
-{%endblock%}
