--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -197,26 +197,29 @@ Sorry there are no Showcases yet.
   {%endif%}
 {%- endmacro -%}
 
-{% macro task_card(name, description,repository, submissions) -%}
-<div class="card" id="{{name}}">
-    <a href="/view_assignment/{{name}}">
-    <h5 class="card-header d-flex justify-content-between align-items-center text-body">{{name}}
+{% macro assignment_card(assignment, submissions) -%}
+<div class="card" id="{{assignment.name}}">
+    <a href="/view_assignment/{{assignment.name}}">
+    <h5 class="card-header d-flex justify-content-between align-items-center text-body">{{assignment.title}}
+        {%if assignment.due_date%}
+        <small class="text-muted">due {{assignment.due_date|timeago}} </small>
+        {%endif%}
         {% if submissions%}
         {{grade_block(submissions[0].grade) if submissions[0].assignment.path is not none}}
     {%endif%}</h5>
     </a>
 
     <div class="card-body card-text">
-            {{description}}
+            {{assignment.description}}
             {%if submissions %}
             <hr>
             <a href="/review/{{submissions[0].filepath}}" class="btn btn-light btn-rounded">View latest submission</a>
             {%endif%}
     </div>
     <div class="card-footer text-muted">
-        <a href="https://colab.research.google.com/github/{{repository}}" target="_blank"><span class="badge bg-info">
+        <a href="https://colab.research.google.com/github/{{assignment.repository}}" target="_blank"><span class="badge bg-info">
             <i class="fas fa-infinity"></i> Open in Colab</span></a>
-    <a href="https://www.github.com/{{repository}}" target="_blank"><span class="badge bg-info ms-2 me-5"><i class="fas fa-download fa-lg"></i>
+    <a href="https://www.github.com/{{assignment.repository}}" target="_blank"><span class="badge bg-info ms-2 me-5"><i class="fas fa-download fa-lg"></i>
             Download</span></a>
 
     </div>
