--- a/annie/blueprints/playground/templates/playground.html
+++ b/annie/blueprints/playground/templates/playground.html
@@ -18,19 +18,25 @@
 {% block content %}
 <div class="container mt-5"> 
   {{flash_message()}}      
-  <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" data-mdb-toggle="modal" data-mdb-target="#showcase-modal">
-    Ready to show it to others?
-  </button>
-  {{create_showcase(tags,uploaded=False)}}
   {%if filtered%}
-  
   <section id="search">
-    <h4>Filtered by Tag <span class="badge rounded-pill bg-secondary">{{filtered}}<a href="/playground" class="btn-close btn-close-white ms-2" aria-label="Close"></a></span></h4>
+    <h4 class="mt-3">Filtered by Tag <span class="badge rounded-pill bg-secondary">{{filtered}}<a href="/playground" class="btn-close btn-close-white ms-2" aria-label="Close"></a></span></h4>
     {{showcase_block(showcases.get_by_tag(filtered))}}
     {%else%}
   </section>
 <section id="recently">
-    <h4>Recently Added</h4>
+  <div class="row my-3">
+    <div class="col-md-9">
+    <h4>Recently Added</h4> 
+  </div>
+  <div class="col-md-3 d-grid">
+  <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" data-mdb-toggle="modal" data-mdb-target="#showcase-modal">
+      Ready to show yours?
+    </button>
+  </div>
+  </div>
+    {{create_showcase(tags,uploaded=False)}}
+
     {{showcase_block(showcases.getrecent())}}
 
   </section>
