--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -69,7 +69,7 @@
 
         </div>
     </div>
-    {% if comments %}
+    {% if comments or comments==[]%}
     {{comments_block(comments,add=true)}}
     {% endif %}
 
@@ -104,7 +104,8 @@
 {%- endmacro %}
 {%- macro comment_block(comment)%}
 <div class="d-flex flex-start align-items-center">
-    <img class="rounded-circle shadow-1-strong me-3" src="https://mdbootstrap.com/img/Photos/Avatars/img%20(19).jpg" alt="avatar" width="60" height="60" />
+    <i class="fas fa-user fa-2x me-3"></i>
+    
     <div>
         <h6 class="fw-bold mb-1">{{comment.user.username}}</h6>
         <p class="text-muted small mb-0">
@@ -116,6 +117,7 @@
 <p class="mt-3 mb-4 pb-2">
     {{comment.html|safe}}
 </p>
+<hr>
 {%- endmacro %}
 
 
